char, float parser

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,5 @@
     "files.associations": {
         "parser.h": "c"
     },
-    "workbench.colorTheme": "Tokyo Night Storm"
+    "workbench.colorTheme": "Palenight Operator"
 }
