update errors, fix char

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,3 @@
 {
-    "files.associations": {
-        "parser.h": "c"
-    },
-    "workbench.colorTheme": "Palenight Operator"
+    "workbench.colorTheme": "Tokyo Night Storm"
 }
